# HES_DigitalTwin

./: Dockerfile  README.md
exoskeleton_bringup/: CMakeLists.txt  package.xml
exoskeleton_bringup/config/: dynamics_params.yaml  fault_framework_params.yaml
exoskeleton_bringup/launch/: control_loop_only.launch.py  full_sim.launch.py  injection_testing.launch.py  neural_fdi_testing.launch.py  new_injection_testing.launch.py  testing.launch.py
exoskeleton_control/: package.xml  setup.cfg  setup.py
exoskeleton_control/exoskeleton_control/: admittance_controller.py  trajectory_controller.py
exoskeleton_description/: CMakeLists.txt  package.xml
exoskeleton_description/launch/: display_exo_hand.launch.py  display_exo_solo.launch.py
exoskeleton_description/meshes/: link_CE.stl  mano_distale.stl  mano_prossimale.stl  rear_crank.stl  slider_t.stl
exoskeleton_description/rviz/: exo_display.rviz  exo_hand_display.rviz
exoskeleton_description/urdf/: assembly.urdf  assembly_with_hand.urdf
exoskeleton_description/urdf/.ipynb_checkpoints/: BACKUP_DONT_DELETE-checkpoint.urdf  assembly-checkpoint.urdf
exoskeleton_dynamics/: package.xml  setup.cfg  setup.py
exoskeleton_dynamics/exoskeleton_dynamics/: dynamics_stripped.py  new_dynamics_with_hand.py
exoskeleton_faults/: package.xml  setup.cfg  setup.py
exoskeleton_faults/exoskeleton_faults/: fault_framework.py  fault_injector.py
exoskeleton_neural_fdi/: package.xml  setup.cfg  setup.py
exoskeleton_neural_fdi/config/: neural_fdi_params.yaml
exoskeleton_neural_fdi/exoskeleton_neural_fdi/: dataset.py  fdi_node.py  models.py  trainer.py
exoskeleton_observers/: package.xml  setup.cfg  setup.py
exoskeleton_observers/exoskeleton_observers/: observer_node.py
exoskeleton_safety_manager/: CMakeLists.txt  package.xml  plugins.xml
exoskeleton_safety_manager/include/exoskeleton_safety_manager/: BridgeModeClient.hpp  CompliantMode.hpp  FaultMonitorMode.hpp  SafeStopMode.hpp  StateMachine.hpp  TorqueLimitMode.hpp
exoskeleton_safety_manager/src/: CompliantMode.cpp  FaultMonitorMode.cpp  SafeStopMode.cpp  StateMachine.cpp  TorqueLimitMode.cpp  state_machine_node.cpp
exoskeleton_safety_manager/test/: test_state_machine_launch.py
exoskeleton_safety_msgs/: CMakeLists.txt  package.xml
exoskeleton_safety_msgs/msg/: Float64ArrayStamped.msg
exoskeleton_supervision/: package.xml  setup.cfg  setup.py
exoskeleton_supervision/exoskeleton_supervision/: exo_bridge.py
exoskeleton_supervision/test/: test_exo_bridge_launch.py
exoskeleton_utils/: package.xml  setup.cfg  setup.py
exoskeleton_utils/exoskeleton_utils/: GUI.py  GUI_control.py  external_wrench_sine.py  external_wrench_step.py  logger.py
exoskeletron_bringup/: CMakeLists.txt  package.xml
exoskeletron_bringup/config/: dynamics_params.yaml  exo_bridge_params.yaml  koopman_fdi_params.yaml  observer_params.yaml  safety_params.yaml
exoskeletron_bringup/launch/: control_loop_only.launch.py  full_sim.launch.py  injection_testing.launch.py  koopman_fdi_testing.launch.py  testing.launch.py  testing_bridge.launch.py
exoskeletron_control/: package.xml  setup.cfg  setup.py
exoskeletron_control/exoskeletron_control/: admittance_controller.py  trajectory_controller.py
exoskeletron_description/: CMakeLists.txt  package.xml
exoskeletron_description/launch/: display_exo_hand.launch.py  display_exo_solo.launch.py
exoskeletron_description/meshes/: body.stl  connecting_rod.stl  link_AC.stl  link_BC.stl  mano_mediale.stl  mano_palmo.stl  slider_f.stl  thimble.stl
exoskeletron_description/rviz/: exo_display.rviz  exo_hand_display.rviz
exoskeletron_description/urdf/: assembly.urdf  assembly_with_hand.urdf
exoskeletron_description/urdf/.ipynb_checkpoints/: BACKUP_DONT_DELETE-checkpoint.urdf  assembly-checkpoint.urdf
exoskeletron_dynamics/: package.xml  setup.cfg  setup.py
exoskeletron_dynamics/exoskeletron_dynamics/: dynamics_stripped.py  ekf_observer.py  new_dynamics_with_hand.py
exoskeletron_faults/: package.xml  setup.cfg  setup.py
exoskeletron_faults/exoskeletron_faults/: fault_injector.py
exoskeletron_observers/: package.xml  setup.cfg  setup.py
exoskeletron_observers/exoskeletron_observers/: koopman_fdi_node.py  observer_node.py
exoskeletron_safety_manager/: CMakeLists.txt  package.xml  plugins.xml
exoskeletron_safety_manager/include/exoskeletron_safety_manager/: BridgeModeClient.hpp  CompliantMode.hpp  FaultMonitorMode.hpp  SafeStopMode.hpp  SafetyTools.hpp  SensorDegradedMode.hpp  StateMachine.hpp  TorqueLimitMode.hpp  safety_states.hpp
exoskeletron_safety_manager/src/: CompliantMode.cpp  FaultMonitorMode.cpp  SafeStopMode.cpp  SensorDegradedMode.cpp  StateMachine.cpp  TorqueLimitMode.cpp  state_machine_node.cpp
exoskeletron_safety_manager/test/: test_state_machine_launch.py
exoskeletron_safety_msgs/: CMakeLists.txt  package.xml
exoskeletron_safety_msgs/msg/: Float64Stamped.msg  SafetyStatus.msg
exoskeletron_safety_msgs/srv/: SetMode.srv
exoskeletron_supervision/: package.xml  setup.cfg  setup.py
exoskeletron_supervision/exoskeletron_supervision/: exo_bridge.py
exoskeletron_supervision/test/: test_exo_bridge_launch.py
exoskeletron_utils/: package.xml  setup.cfg  setup.py
exoskeletron_utils/exoskeletron_utils/: GUI.py  GUI_control.py  external_wrench_pub.py  external_wrench_sine.py  external_wrench_step.py  logger.py
