<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exoskeleton_neural_fdi</name>
  <version>0.1.0</version>
  <description>
    Data-driven Fault Detection and Isolation using GRU neural observers
    for the hand exoskeleton Digital Twin.
  </description>

  <maintainer email="marcello.bari@poliba.it">Marcello Bari</maintainer>
  <license>MIT</license>

  <!-- Build type -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>exoskeleton_safety_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>