<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exoskeleton_observers</name>
  <version>0.0.0</version>
  <description>
    Model-based observers (Luenberger state observer + generalized momentum
    torque observer) for fault detection on the exoskeleton digital twin.
    Publishes residuals on /observer/state_residual and
    /observer/torque_residual for integration with the safety state machine.
  </description>
  <maintainer email="mbari@todo.todo">mbari</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>exoskeleton_safety_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>